examples/test/testpolicy4615.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4615
  namespace: namespace181
spec:
  podSelector:
    matchLabels:
      key45: value24
      key30: value47
      key27: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value32
          key49: value35
          key33: value6
      podSelector:
        matchLabels:
          key8: value7
